--- a/src/app/modules/pages/article/article-page/article-page.component.html
+++ b/src/app/modules/pages/article/article-page/article-page.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="article">
+<ng-container *ngIf="article" #scrollToTop>
     <ia-navbar [sectionTitle]="article.title" [showSearchButton]="false"></ia-navbar>
     <div class="container">
         <ia-title-header [title]="article.title"></ia-title-header>
