--- a/src/app/modules/pages/main/components/study-case-carrousel/study-case-carrousel.component.css
+++ b/src/app/modules/pages/main/components/study-case-carrousel/study-case-carrousel.component.css
@@ -3,9 +3,12 @@
 }
 .item-carrousel:hover {
     cursor: pointer;
-    backdrop-filter: blur(100%);
 }
 
-.item-carrousel{
+.item-carrousel {
     background-size: 100%;
+}
+
+.title-car {
+    backdrop-filter: blur(10px);
 }
