--- a/src/app/modules/pages/main/components/study-case-carrousel/study-case-carrousel.component.html
+++ b/src/app/modules/pages/main/components/study-case-carrousel/study-case-carrousel.component.html
@@ -8,7 +8,7 @@ class="ia-carrousel">
         (mouseout)="showDescription()" 
         (click)="redirectToCase(product.cut)"
         >
-            <div>
+            <div class="title-car">
                 <h4 class="mb-1">{{ product.title }}</h4>
                 <h6 class="mt-0 mb-3">{{ product.shortDescripton }}</h6>
             </div>
