--- a/src/app/modules/pages/study-cases/study-case-page/study-case-page.component.html
+++ b/src/app/modules/pages/study-cases/study-case-page/study-case-page.component.html
@@ -1,2 +1,4 @@
 <ia-ce-enfermedad-cardiaca *ngIf="cardio"></ia-ce-enfermedad-cardiaca>
 <ia-ckd *ngIf="ckd"></ia-ckd>
+<ia-titanic *ngIf="titanic"></ia-titanic>
+<ia-animals *ngIf="animals"></ia-animals>
