--- a/src/app/modules/pages/main/main-page/main-page.component.html
+++ b/src/app/modules/pages/main/main-page/main-page.component.html
@@ -6,7 +6,7 @@
 
     <div [@fadeInOut] class="animated-item">
         <h2 class="mt-2">Casos de estudio:</h2>
-        <ia-study-case-carrousel></ia-study-case-carrousel>
+        <ia-study-case-carrousel [studyCasesPreview]="sc"></ia-study-case-carrousel>
     </div>
 
     <div class="row" [@fadeInOut]>
@@ -22,5 +22,4 @@
                 <ia-articles-filter (topicSelected)="newTopicSelected($event)" (showDestacado)="showArticulosDestacados($event)"></ia-articles-filter> 
         </div>
     </div>
-    <!-- <ia-paginator (onChangeOfPage)="changeArticlesPage($event)" *ngIf="searchBarText.length == 0"></ia-paginator> -->
 </div>
