--- a/src/app/modules/pages/landing/components/about-toolbar/about-toolbar.component.html
+++ b/src/app/modules/pages/landing/components/about-toolbar/about-toolbar.component.html
@@ -1,6 +1,6 @@
 <p-toolbar>
     <div class="p-toolbar-group-end">
-        <span class="mr-2" (click)="redirectTo('Aboutme')">Acerca
+        <span class="mr-2" (click)="redirectTo('About')">Acerca
             <i class="pi pi-exclamation-circle"></i></span>
         <span class="mr-2" (click)="redirectTo('Github')">Github 
             <i class="pi pi-github"></i></span>
