--- a/src/app/modules/pages/about/about-page/about-page.component.html
+++ b/src/app/modules/pages/about/about-page/about-page.component.html
@@ -1,5 +1,5 @@
 <ia-navbar [sectionTitle]="'Acerca del portafolio'"></ia-navbar>
-<div class="container mt-5">
+<div class="container mt-3">
     <div class="row">
         <div class="col-md-8">
             <h4>Somos un grupo de estudiantes de Ingenieria en Informatica de la UCU.</h4>
@@ -20,8 +20,12 @@
             <img class="img-fluid" src="https://s3.us-east-1.wasabisys.com/imasd/2022/10/Logo-UCU-001-FINAL-03_ID_Uruguay.jpg">
         </div>
     </div>
+    <h4>Colaboradores: </h4>
+    <div>
+        <ia-linkedin-pages></ia-linkedin-pages>
+    </div>
 
-    <div class="mt-5 ia-back-to-home">
+    <div class="mt-3 ia-back-to-home mb-3">
         <p-button (onClick)="redirectHome()">Volver al inicio</p-button>
     </div>
 
